--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=>, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WebStudio</title>
 </head>
 
 <body>
@@ -12,18 +12,19 @@
         <nav>
             <a href="index.html">WEBSTUDIO</a>
             <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+                <li><a href="#">Studio</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Contacts</a></li>
             </ul>
         </nav>
         <address>
             <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            </ul>
         </address>
-        </ul>
     </header>
+
     <main>
         <section>
             <h1>Effective Solutions for Your Business</h1>
@@ -33,28 +34,30 @@
         <section>
             <ul>
                 <li>
-                    <h2>Strategy</h2>
-                    <p>Our goal is to identify the business
-                        problem to walk away with the perfect and creative solution.
+                    <h3>Strategy</h3>
+                    <p>
+                        Our goal is to identify the business problem to walk away with the perfect and creative
+                        solution.
                     </p>
                 </li>
                 <li>
-                    <h2>Punctuality</h2>
-                    <p>Bring the key message to the brand's
-                        audience for the best price within the shortest possible time.
+                    <h3>Punctuality</h3>
+                    <p>
+                        Bring the key message to the brand's audience for the best price within the shortest possible
+                        time.
                     </p>
                 </li>
                 <li>
-                    <h2>Diligence</h2>
-                    <p>Research and confirm brands with
-                        the strongest digital growth opportunities and minimize risk.
+                    <h3>Diligence</h3>
+                    <p>
+                        Research and confirm brands with the strongest digital growth opportunities and minimize risk.
                     </p>
                 </li>
-
                 <li>
-                    <h2>Technologies</h2>
-                    <p>Design practice focused on digital experiences.
-                        We bring forth a deep passion for problem-solving.
+                    <h3>Technologies</h3>
+                    <p>
+                        Design practice focused on digital experiences. We bring forth a deep passion for
+                        problem-solving.
                     </p>
                 </li>
             </ul>
@@ -64,29 +67,29 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./images/images/img.jpg" alt="Mark Guerrero, Product Designer" width="270" />
+                    <img src="./images/img.jpg" alt="Mark Guerrero, Product Designer" width="270" />
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/images/img-2.jpg" alt="Tom Ford, Frontend Developer" width="270" />
+                    <img src="./images/img-2.jpg" alt="Tom Ford, Frontend Developer" width="270" />
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/images/img-3.jpg" alt="Camila Garcia, Marketing" width="270" />
+                    <img src="./images/img-3.jpg" alt="Camila Garcia, Marketing" width="270" />
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/images/img-4.jpg" alt="Daniel Wilson, UI Designer" width="270" />
+                    <img src="./images/img-4.jpg" alt="Daniel Wilson, UI Designer" width="270" />
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
-    <!-- тестовая строка -->
+
     <footer>
         <a href="/" class="logo">WEB<span>STUDIO</span></a>
         <p>
@@ -94,10 +97,6 @@
             marketing & growth solutions.
         </p>
     </footer>
-</body>
-</section>
-</main>
-<!-- TEST: проверка отображения -->
 </body>
 
 </html>
