--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+Перейти к содержимому
+Вы сказали:
+вот ошибки которые надо исправить:
+
+На сайті відображаються всі картинки що створені через тег img
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -67,22 +73,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./images/img.jpg" alt="Mark Guerrero, Product Designer" width="270" />
+                    <img src="./images/images/img.jpg" alt="Mark Guerrero, Product Designer" width="270" />
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/img-2.jpg" alt="Tom Ford, Frontend Developer" width="270" />
+                    <img src="./images/images/img-2.jpg" alt="Tom Ford, Frontend Developer" width="270" />
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/img-3.jpg" alt="Camila Garcia, Marketing" width="270" />
+                    <img src="./images/images/img-3.jpg" alt="Camila Garcia, Marketing" width="270" />
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/img-4.jpg" alt="Daniel Wilson, UI Designer" width="270" />
+                    <img src="./images/images/img-4.jpg" alt="Daniel Wilson, UI Designer" width="270" />
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
@@ -100,3 +106,231 @@
 </body>
 
 </html>
+ChatGPT сказал:
+Если вы хотите, чтобы не все картинки, созданные через тег <img>, отображались на сайте, и только определённые из них
+появлялись, то вам нужно исправить HTML или стили CSS, чтобы скрыть ненужные изображения или не добавлять их вовсе.
+
+Вот распространённые ошибки и возможные исправления:
+
+🔴 Ошибка 1: Дублированный путь к картинкам
+В коде путь к картинкам написан так:
+
+<img src="./images/images/img.jpg" ... />
+Если папка images только одна, то путь должен быть:
+
+<img src="./images/img.jpg" ... />
+🛠 Исправление:
+Убедитесь, что картинки находятся в правильной папке. Исправьте путь на:
+
+<img src="./images/img.jpg" alt="..." width="270" />
+🔴 Ошибка 2: Картинки отображаются, хотя вы не хотите их видеть
+Если вам не нужно отображать все <img>, то:
+
+Вариант 1: Удалите ненужные теги <img>
+Просто удалите <img> для тех участников команды, которых не хотите показывать.
+
+Вариант 2: Скрыть через CSS
+Добавьте класс, например hidden, к тем изображениям, которые не хотите отображать:
+
+<img src="./images/img.jpg" alt="..." class="hidden" />
+А в CSS добавьте:
+
+.hidden {
+display: none;
+}
+Если вы не используете отдельный CSS, вставьте стиль прямо в
+
+<head>:
+
+    <style>
+        .hidden {
+            display: none;
+        }
+    </style>
+    🔴 Ошибка 3: Вы показываете всех участников команды
+    Если вы хотите ограничить число участников, то можно просто оставить нужные элементы в <ul>:
+
+        🛠 Например, оставить только первого:
+
+        <ul>
+            <li>
+                <img src="./images/img.jpg" alt="Mark Guerrero, Product Designer" width="270" />
+                <h3>Mark Guerrero</h3>
+                <p>Product Designer</p>
+            </li>
+        </ul>
+        Хотите скрыть только некоторые изображения или настроить отображение динамически через JS или CSS?
+
+        Вы сказали:
+        Логотип це посилання з атрибутом href=”./index.html” - тоже ошибка
+        ChatGPT сказал:
+        Так, ви абсолютно праві — вказаний атрибут href="./index.html" у логотипі у футері не відповідає вимогам. Ось
+        чому це вважається помилкою:
+
+        ❌ Помилка: Невірне значення href="./index.html"
+        У футері у вас такий код:
+
+        <a href="/" class="logo">WEB<span>STUDIO</span></a>
+        А ви пишете, що має бути href="./index.html". Насправді:
+
+        Якщо ваш сайт хоститься в корені домену (наприклад, https://example.com), то / і ./index.html можуть працювати
+        однаково.
+
+        / веде на головну сторінку сайту, незалежно від поточної папки.
+
+        ./index.html означає: "відкрий файл index.html в поточній директорії", що не завжди працює однаково на всіх
+        серверах.
+
+        ✅ Як правильно:
+        Якщо сайт розгорнутий у кореневій папці — краще використовуйте:
+
+        <a href="index.html" class="logo">WEB<span>STUDIO</span></a>
+        або
+
+        <a href="./index.html" class="logo">WEB<span>STUDIO</span></a>
+        Якщо ви хочете, щоб лінк завжди вів на головну — використовуйте:
+
+        <a href="/" class="logo">WEB<span>STUDIO</span></a>
+        Але тоді переконайтесь, що index.html дійсно знаходиться в корені.
+
+        📌 Підсумок:
+        Якщо завдання — "логотип має бути посиланням на index.html", то правильний варіант:
+
+        <a href="index.html" class="logo">WEB<span>STUDIO</span></a>
+        Хочете, щоб я перевірив увесь код і зробив фінальну виправлену версію з усіма потрібними змінами?
+
+        Вы сказали:
+        там их больше, вот они все ошибки:
+
+        -Логотип це посилання з атрибутом href=”./index.html”
+        -Логотип має містити лише текст WebStudio (без додаткових тегів)
+        -Секція №2 містить заголовок зроблений тегом h2
+        -Для читалок та пошукових систем (на наступних модулях він буде прихований)
+        -У першому пункті списку зберігається картинка зроблена тегом img з атрибутом width - атрибут, що містить
+        значення 264
+        -У другому пункті списку зберігається картинка зроблена тегом img з атрибутом width - атрибут, що містить
+        значення 264
+        -У третьому пункті списку зберігається картинка зроблена тегом img з атрибутом width - атрибут, що містить
+        значення 264
+        -У четвертому пункті списку зберігається картинка зроблена тегом img з атрибутом width - атрибут, що містить
+        значення 264
+        -Логотип має містити лише текст WebStudio (без додаткових тегів)
+
+        ChatGPT сказал:
+        Дякую! Ви чітко сформулювали список помилок. Ось виправлений HTML-код, де враховані всі зазначені вимоги:
+
+        ✅ Виправлення:
+        Логотип — посилання на ./index.html, без додаткових тегів усередині.
+
+        Заголовок секції №2 змінено з h3 на h2.
+
+        Атрибут width="264" встановлено для всіх зображень у секції "Our Team".
+
+        Логотип у футері також без зайвих тегів.
+
+        ✅ Оновлений HTML-код:
+        <!DOCTYPE html>
+        <html lang="en">
+
+        <head>
+            <meta charset="UTF-8" />
+            <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+            <title>WebStudio</title>
+        </head>
+
+<body>
+    <header>
+        <nav>
+            <a href="./index.html">WebStudio</a>
+            <ul>
+                <li><a href="#">Studio</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Contacts</a></li>
+            </ul>
+        </nav>
+        <address>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            </ul>
+        </address>
+    </header>
+
+    <main>
+        <section>
+            <h1>Effective Solutions for Your Business</h1>
+            <button type="button">Order Service</button>
+        </section>
+
+        <section>
+            <h2 class="visually-hidden">Advantages</h2>
+            <ul>
+                <li>
+                    <h2>Strategy</h2>
+                    <p>
+                        Our goal is to identify the business problem to walk away with the perfect and creative
+                        solution.
+                    </p>
+                </li>
+                <li>
+                    <h2>Punctuality</h2>
+                    <p>
+                        Bring the key message to the brand's audience for the best price within the shortest possible
+                        time.
+                    </p>
+                </li>
+                <li>
+                    <h2>Diligence</h2>
+                    <p>
+                        Research and confirm brands with the strongest digital growth opportunities and minimize risk.
+                    </p>
+                </li>
+                <li>
+                    <h2>Technologies</h2>
+                    <p>
+                        Design practice focused on digital experiences. We bring forth a deep passion for
+                        problem-solving.
+                    </p>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Our Team</h2>
+            <ul>
+                <li>
+                    <img src="./images/img.jpg" alt="Mark Guerrero, Product Designer" width="264" />
+                    <h3>Mark Guerrero</h3>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/img-2.jpg" alt="Tom Ford, Frontend Developer" width="264" />
+                    <h3>Tom Ford</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/img-3.jpg" alt="Camila Garcia, Marketing" width="264" />
+                    <h3>Camila Garcia</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/img-4.jpg" alt="Daniel Wilson, UI Designer" width="264" />
+                    <h3>Daniel Wilson</h3>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <a href="./index.html">WebStudio</a>
+        <p>
+            Increase the flow of customers and sales for your business with digital
+            marketing & growth solutions.
+        </p>
+    </footer>
+</body>
+
+</html>
+
+
