--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <a href="index.html">WEBSTUDIO</a>
+            <a href="./index.html">WebStudio</a>
             <ul>
                 <li><a href="#">Studio</a></li>
                 <li><a href="#">Portfolio</a></li>
@@ -67,22 +67,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./images/images/img.jpg" alt="Mark Guerrero, Product Designer" width="270" />
+                    <img src="./images/images/img.jpg" alt="Mark Guerrero, Product Designer" width="264" />
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/images/img-2.jpg" alt="Tom Ford, Frontend Developer" width="270" />
+                    <img src="./images/images/img-2.jpg" alt="Tom Ford, Frontend Developer" width="264" />
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/images/img-3.jpg" alt="Camila Garcia, Marketing" width="270" />
+                    <img src="./images/images/img-3.jpg" alt="Camila Garcia, Marketing" width="264" />
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/images/img-4.jpg" alt="Daniel Wilson, UI Designer" width="270" />
+                    <img src="./images/images/img-4.jpg" alt="Daniel Wilson, UI Designer" width="264" />
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
@@ -91,7 +91,7 @@
     </main>
 
     <footer>
-        <a href="/" class="logo">WEB<span>STUDIO</span></a>
+    <a href="./index.html">WebStudio</a>
         <p>
             Increase the flow of customers and sales for your business with digital
             marketing & growth solutions.
