Полное обновление index.html

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         </section>
 
         <section>
+            <h2 class="visually-hidden">Our Advantages</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
